--- a/pokedex/pokedex.html
+++ b/pokedex/pokedex.html
@@ -6,8 +6,8 @@
     <title>Pokedex</title>
 
     <link rel="icon" href="./fiveicon/favicon-16x16">
-    <link rel="stylesheet" href="./css/style.css">   
-    <script defer src="./js/script.js"></script> 
+    <link rel="stylesheet" href="/css/style.css">   
+    <script defer src="/js/script.js"></script> 
 
 </head>
 <body>
