--- a/pokedex/pokedex.html
+++ b/pokedex/pokedex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
 
-    <link rel="icon" href="./fiveicon/favicon-16x16">
+    <link rel="icon" href="/fiveicon/favicon-16x16">
     <link rel="stylesheet" href="/css/style.css">   
     <script defer src="/js/script.js"></script> 
 
